# episodic_memory

./: .gitignore  README.md  stack.xml
em_tools/: CMakeLists.txt  package.xml
em_tools/src/: input_stabilizer.cpp  input_sync.cpp
episodic_memory_core/: CMakeLists.txt  config.h.in  manifest.xml  package.xml
episodic_memory_core/database/: episodicMemory.db  episodicMemoryTest.db
episodic_memory_core/include/: categoryART.h  channelART.h  channelDao.h  channelObj.h  dao.h  daoFactory.h  episodeLayer.h  episodicMemoryCore.h  inputDao.h  inputData.h  inputLayer.h  inputObj.h  layerART.h  patternRecognizerObj.h  weightDao.h
episodic_memory_core/include/episodic_memory_core/: eventLayer.h  memoryDecay.h  patternRecognizerDao.h  weightObj.h
episodic_memory_core/src/: CMakeLists.txt  categoryART.cpp  channelART.cpp  channelDao.cpp  channelObj.cpp  dao.cpp  daoFactory.cpp  episodeLayer.cpp  episodicMemoryCore.cpp  eventLayer.cpp  inputDao.cpp  inputLayer.cpp  inputObj.cpp  layerART.cpp  memoryDecay.cpp  patternRecognizerDao.cpp  patternRecognizerObj.cpp  weightDao.cpp  weightObj.cpp
episodic_memory_core/unit_test/: CMakeLists.txt  test_init_model.cpp  test_resonance.cpp
episodic_memory_viz/: CMakeLists.txt  manifest.xml  package.xml
episodic_memory_viz/include/: edge.h  graphWidget.h  myApp.h  networkvisualizer.h  node.h
episodic_memory_viz/include/episodic_memory_viz/: graphWidget.h  guiMsgObject.h
episodic_memory_viz/src/: edge.cpp  graphWidget.cpp  main.cpp  networkvisualizer.cpp  node.cpp
perception_context/egosphere_core/: CMakeLists.txt  mainpage.dox  package.xml
perception_context/egosphere_core/include/egosphere/: associations.hpp  egosphere.hpp  information.hpp  iterator.hpp  parameter.hpp  tags.hpp
perception_context/egosphere_core/test/: CMakeLists.txt  common.hpp  test_associations.cpp  test_egosphere.cpp  test_information.cpp  test_iterator.cpp  test_parameter.cpp  test_people_detection_sample.cpp
perception_context/egosphere_ros/: CMakeLists.txt  mainpage.dox  package.xml
perception_context/egosphere_ros/include/egosphere_ros/: egosphere.hpp  info.hpp  parameter_serializable.hpp  params.hpp
perception_context/egosphere_ros/msg/: MsgGenericChange.msg  MsgInformation.msg  MsgParameter.msg  MsgParameters.msg
perception_context/egosphere_ros/src/: egosphere.cpp  info.cpp  params.cpp
perception_context/egosphere_ros/test/: basic_node.cpp  basic_node.launch  test_parameter_serializable.cpp
perception_context/perception_context_msgs/: CMakeLists.txt  mainpage.dox  package.xml
perception_context/perception_context_msgs/action/: deliverObject.action  tweetFoundObject.action
perception_context/perception_context_msgs/msg/: egosphereContent.msg  locationDetection.msg
perception_context/perception_context_msgs/srv/: getLocationCenter.srv  getSectionCoord.srv  startDeliverObject.srv  startTweetFoundObject.srv  stmContent.srv
perception_context/short_term_memory/: CMakeLists.txt  mainpage.dox  package.xml
perception_context/short_term_memory/config/: config_stm.yaml
perception_context/short_term_memory/include/: stmDesires.h  stmEmotions.h  stmInterface.hpp  stmLocation.h  stmObjects.h  stmPeople.h
perception_context/short_term_memory/launch/: shortTermMemory.launch
perception_context/short_term_memory/src/: shortTermMemory.cpp  stmDesires.cpp  stmEmotions.cpp  stmLocation.cpp  stmObjects.cpp  stmPeople.cpp
ros_episodic_memory/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ros_episodic_memory/include/ros_episodic_memory/: episodicMemoryWrapperROS.h  episodic_memory_planner.hpp
ros_episodic_memory/launch/: ros_episodic_memory.launch  test_episodic_memory_planner.launch
ros_episodic_memory/msg/: anticipatedEvent.msg  categoryActivation.msg  contextRepresentation.msg  inputData.msg  learningMode.msg  newCategory.msg  newChannel.msg  recalledEpisode.msg  updatedWeight.msg
ros_episodic_memory/src/: episodicMemoryWrapperROS.cpp  episodic_memory_planner.cpp  episodic_memory_planner_node.cpp  ros_episodic_memory.cpp
ros_episodic_memory/srv/: setLearningRateParameter.srv  setRelevanceParameter.srv  setVigilanceParameter.srv
ros_episodic_memory_viz/: CMakeLists.txt  manifest.xml  package.xml
ros_episodic_memory_viz/include/: ros_networkvisualizer.h
ros_episodic_memory_viz/launch/: ros_episodic_memory_viz.launch
ros_episodic_memory_viz/src/: main.cpp  ros_networkvisualizer.cpp
